--- a/source/report.tex
+++ b/source/report.tex
@@ -2,7 +2,7 @@
 \usepackage[a4paper,bindingoffset=0.2in,%
 left=1in,right=1in,top=1in,bottom=1in,%
 footskip=.25in]{geometry}
-
+% Raj Krishnan 140010007
 \usepackage[backend=bibtex,citestyle=ieee,alldates=iso8601]{biblatex}
 \usepackage{hyperref}
 \usepackage{graphicx}
@@ -17,6 +17,8 @@ footskip=.25in]{geometry}
 \begin{document}
 
 \maketitle
+
+\textbf{The source code for this assignment is available at } \url{https://github.com/raj-krishnan/SDES_project_pendulum_with_friction}
 
 \section{Introduction}
   The primary forces acting on the pendulum bob are the gravitational force 
@@ -55,7 +57,17 @@ footskip=.25in]{geometry}
   The trajectory of the pendulum bob is now calculated and we save it's angle
   and angular velocity.
 
-\section{Plots}
+ \section{Dependencies}
+   The dependencies that are required to be installed are:
+
+   \begin{itemize}
+     \item Python 3
+     \item Latex
+     \item Bibtex
+     \item numpy, scipy, matplotlib
+   \end{itemize}
+
+\section{Plots and Animations}
   The oscillator class is now instantiated to obtain plots under various
   scenarios. \cref{fig:plot_pendulum} contains a plot of angular displacement with time for 
   various damping conditions
@@ -75,6 +87,13 @@ footskip=.25in]{geometry}
     \caption{Plot showing the angular displacement against the angular velocity}
     \label{fig:plot_theta_relation}
   \end{figure}
+
+  The animations for the assignment are available in the html file 140010007.html. 
+  The animations include the evolution of angular displacement and velocity 
+  over time, as well as a model of a damped simple pendulum. 
+  
+ 
+   % The animations for this assignment can be found \url{file://../output/report.pdf}{here}
 
 \printbibliography
 
